--- a/streamdeck-obstools/PropertyInspector/DroppedFrames.html
+++ b/streamdeck-obstools/PropertyInspector/DroppedFrames.html
@@ -23,6 +23,10 @@
                 <option value="2">Render Missed Frames</option>
             </select>
         </div>
+        <div type="color" class="sdpi-item" id="dvAlert">
+            <div class="sdpi-item-label">Alert Color</div>
+            <input type="color" class="sdpi-item-value sdProperty" value="#FF0000" id="alertColor" oninput="setSettings()">
+        </div>
         <hr />
         <div class="sdpi-item" id="dvReset">
             <div class="sdpi-item-label">Reset Settings</div>
