WIP Support for showing InstantReplay on Stream

--- a/streamdeck-obstools/PropertyInspector/OBSTools.html
+++ b/streamdeck-obstools/PropertyInspector/OBSTools.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="sdpi.css">
     <script src="sdtools.common.js"></script>
     <script src="setup.js"></script>
+    <script src="OBSTools.js"></script>
 </head>
 <body>
     <div class="sdpi-wrapper">
