--- a/streamdeck-obstools/PropertyInspector/DroppedFrames.html
+++ b/streamdeck-obstools/PropertyInspector/DroppedFrames.html
@@ -13,7 +13,7 @@
 <body>
     <div class="sdpi-wrapper">
         <details class="message">
-            <summary>For feedback/suggestions contact me at <span class="linkspan" onclick="openWebsite()">https://BarRaider.github.io</span></summary>
+            <summary>For feedback/suggestions contact me at <span class="linkspan" onclick="openWebsite()">https://BarRaider.com</span></summary>
         </details>
         <div class="sdpi-item" id="select_single">
             <div class="sdpi-item-label">Frames Type</div>
