--- a/streamdeck-obstools/PropertyInspector/InstantReplay.html
+++ b/streamdeck-obstools/PropertyInspector/InstantReplay.html
@@ -15,7 +15,7 @@
 <body>
     <div class="sdpi-wrapper">
         <details class="message">
-            <summary>For feedback/suggestions contact me at <span class="linkspan" onclick="openWebsite()">https://BarRaider.github.io</span></summary>
+            <summary>For feedback/suggestions contact me at <span class="linkspan" onclick="openWebsite()">https://BarRaider.com</span></summary>
         </details>
         <div type="checkbox" class="sdpi-item" id="dvAutoReplay">
             <div class="sdpi-item-label">Auto Replay</div>
@@ -34,6 +34,10 @@
                 <div class="sdpi-item-label">Media Source Name</div>
                 <input class="sdpi-item-value sdProperty" placeholder="Source name in OBS" value="" id="sourceName" oninput="setSettings()">
             </div>
+            <div class="sdpi-item" id="dvDelayReplay">
+                <div class="sdpi-item-label">Delay Replay Start (seconds)</div>
+                <input class="sdpi-item-value sdProperty" placeholder="1" value="" pattern="^[0-9]*$" id="delayReplaySeconds" oninput="setSettings()">
+            </div>
             <div type="checkbox" class="sdpi-item" id="dvMute">
                 <div class="sdpi-item-label">Mute</div>
                 <div class="sdpi-item-value">
@@ -45,6 +49,33 @@
                 <div class="sdpi-item-label">Auto Hide Source (seconds)</div>
                 <input class="sdpi-item-value sdProperty" placeholder="20" value="" pattern="^[0-9]*$" id="hideReplaySeconds" oninput="setSettings()">
             </div>
+            <div type="checkbox" class="sdpi-item" id="dvChatIntegration">
+                <div class="sdpi-item-label">Twitch</div>
+                <div class="sdpi-item-value">
+                    <input id="twitchIntegration" type="checkbox" value="" class="sdProperty sdCheckbox" oninput="setSettings()">
+                    <label for="twitchIntegration" class="sdpi-item-label"><span></span>Enable Twitch Chat Integration</label>
+                </div>
+            </div>
+            <div id="dvChatIntegrationSettings">
+                <div class="sdpi-item" id="anumber">
+                    <div class="sdpi-item-label">Replay Cooldown (seconds)</div>
+                    <input class="sdpi-item-value sdProperty" id="replayCooldown" inputmode="numeric" pattern="[0-9]*" type="number" oninput="setSettings()">
+                </div>
+                <div type="range" class="sdpi-item">
+                    <details class="message">
+                        <summary>Leave Allowed Users blank to allow anyone in chat to request a !replay</summary>
+                    </details>
+                </div>
+                <div type="textarea" class="sdpi-item" id="inputText_div">
+                    <div class="sdpi-item-label">Allowed Users (optional)</div>
+                    <span class="sdpi-item-value textarea">
+                        <textarea type="textarea" oninput="setSettings()" class="sdProperty" id="allowedUsers" placeholder="One username per line"></textarea>
+                    </span>
+                </div>
+            </div>
+            <details class="message" id="dvChatDesc">
+                <summary>Chat integration allows showing a replay when users type !replay in chat</summary>
+            </details>
         </div>
         <hr />
         <div class="sdpi-item" id="dvReset">
@@ -54,6 +85,7 @@
         </div>
         <div class="sdpi-item" id="dvHdn">
             <input value="" type="hidden" id="serverInfoExists" class="sdProperty" oninput="setSettings()">
+            <input value="" type="hidden" id="twitchTokenExists" class="sdProperty" oninput="setSettings()">
         </div>
     </div>
 </body>
