--- a/streamdeck-obstools/PropertyInspector/OBSTools.html
+++ b/streamdeck-obstools/PropertyInspector/OBSTools.html
@@ -14,7 +14,7 @@
 <body>
     <div class="sdpi-wrapper">
         <details class="message">
-            <summary>For feedback/suggestions contact me at <span class="linkspan" onclick="openWebsite()">https://BarRaider.github.io</span></summary>
+            <summary>For feedback/suggestions contact me at <span class="linkspan" onclick="openWebsite()">https://BarRaider.com</span></summary>
         </details>
         <hr />
         <div class="sdpi-item" id="dvReset">
