--- a/streamdeck-obstools/PropertyInspector/Transition.html
+++ b/streamdeck-obstools/PropertyInspector/Transition.html
@@ -5,9 +5,9 @@
     <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,minimal-ui,viewport-fit=cover">
     <meta name=apple-mobile-web-app-capable content=yes>
     <meta name=apple-mobile-web-app-status-bar-style content=black>
-    <title>BarRaider's OBS Tools</title>
-    <link rel="stylesheet" href="sdpi.css">
-    <script src="sdtools.common.js"></script>
+    <title>OBS Tools Transition</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/barraider/streamdeck-easypi@latest/src/sdpi.css">
+    <script src="https://cdn.jsdelivr.net/gh/barraider/streamdeck-easypi@latest/src/sdtools.common.js"></script>
     <script src="setup.js"></script>
     <script src="Transition.js"></script>
     <script src="OBSTools.js"></script>
