--- a/streamdeck-obstools/PropertyInspector/InstantReplay.html
+++ b/streamdeck-obstools/PropertyInspector/InstantReplay.html
@@ -19,6 +19,12 @@
         <details class="message">
             <summary>For feedback/suggestions contact me at <span class="linkspan" onclick="openWebsite()">https://BarRaider.com</span></summary>
         </details>
+        <details class="message">
+            <summary><span class="linkspan">Click here</span> for usage instructions</summary>
+            <p>For detailed instructions see our <span class="linkspan" onclick="openTutorial()">YouTube Tutorial</span></p>
+            <p>Long press to enable/disable the OBS 'Replay Buffer'</p>
+            <p>Short press (after buffer is enabled) to create an instant replay</p>
+        </details>
         <div type="checkbox" class="sdpi-item" id="dvChatIntegration">
             <div class="sdpi-item-label">Twitch</div>
             <div class="sdpi-item-value">
