--- a/streamdeck-obstools/PropertyInspector/Recording.html
+++ b/streamdeck-obstools/PropertyInspector/Recording.html
@@ -41,6 +41,18 @@
                 <label for="longKeypressTime" class="rangeLabel"></label>
             </div>
         </div>
+        <div class="sdpi-item">
+            <div class="sdpi-item-label">Start Icon</div>
+            <input class="sdpi-item-value sdProperty" id="recordingIcon" oninput="setSettings()">
+        </div>
+        <div class="sdpi-item">
+            <div class="sdpi-item-label">Stopped Icon</div>
+            <input class="sdpi-item-value sdProperty" id="stoppedIcon" oninput="setSettings()">
+        </div>
+        <div class="sdpi-item">
+            <div class="sdpi-item-label">Paused Icon</div>
+            <input class="sdpi-item-value sdProperty" id="pausedIcon" oninput="setSettings()">
+        </div>
         <div class="sdpi-info-label hidden" style="top: -1000;" value="">Tooltip</div>
         <hr />
         <div class="sdpi-item" id="dvReset">
