--- a/streamdeck-obstools/PropertyInspector/TwitchSetup/index.html
+++ b/streamdeck-obstools/PropertyInspector/TwitchSetup/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Twitch Pager Setup</title>
+    <title>Twitch Connection Setup</title>
     <meta name='viewport' content='viewport-fit=cover, width=device-width, initial-scale=1'>
     <meta charset="UTF-8">
     <!-- Import style sheets -->
@@ -15,9 +15,24 @@
 <body>
     <div class="main">
         <div class="center">
-            <div class="border">
+            <div class="icon-bar">
+                <div id="app-wrapper">
+                    <div id="app-logo" class="app-logo"></div>
+                    <div id="app-over"></div>
+                </div>
+                <div id="br-wrapper">
+                    <div id="br-logo" class="br-logo"></div>
+                    <div id="br-over"></div>
+                </div>
+            </div>
+            <div class="content-wrapper">
                 <!-- Status bar indicating the current view -->
                 <div class="status-bar">
+                    <div class="title-row">
+                        <div id="title-intro" class="title-cell"></div>
+                        <div id="title-pairing" class="title-cell"></div>
+                        <div id="title-result" class="title-cell"></div>
+                    </div>
                     <div class="status-row">
                         <div id="status-intro" class="status-cell"></div>
                         <div id="status-pairing" class="status-cell"></div>
@@ -26,11 +41,17 @@
                 </div>
                 <!-- General header element -->
                 <div class="header">
-                    <h2>Twitch Pager</h2>
                     <h1 id="title"></h1>
                 </div>
                 <!-- Main view element -->
                 <div id="content"></div>
+            </div>
+            <!-- Completion Box -->
+            <div id="bar-box" style="display:none;">
+                <p class='bar-box-title bar-box-font'>This plugin was developed by:</p><br />
+                <h2 class='bar-logo'>BarRaider</h2>
+                <p class='bar-box-font margin-top0'>Join the community for future apps and updates</p>
+                <span class='button twitter' id='twitter'><img src='./images/twitter.png'>TWITTER</span><span class='button discord' id='discord'><img src='./images/discord.png'>DISCORD</span>
             </div>
         </div>
     </div>
