--- a/streamdeck-obstools/PropertyInspector/SourceVolumeAdjuster.html
+++ b/streamdeck-obstools/PropertyInspector/SourceVolumeAdjuster.html
@@ -29,6 +29,8 @@
                 <option value="-15">-15</option>
                 <option value="-10">-10</option>
                 <option value="-5">-5</option>
+                <option value="-1">-1</option>
+                <option value="1">+1</option>
                 <option value="5" selected>+5</option>
                 <option value="10">+10</option>
                 <option value="15">+15</option>
