--- a/streamdeck-obstools/PropertyInspector/SourceVolume.html
+++ b/streamdeck-obstools/PropertyInspector/SourceVolume.html
@@ -21,7 +21,7 @@
         </details>
         <div class="sdpi-item" id="dvSourceName">
             <div class="sdpi-item-label">Source Name</div>
-            <input class="sdpi-item-value sdProperty" id="sourceName" oninput="setSettings()">
+            <select class="sdpi-item-value select sdProperty sdList" id="sources" oninput="setSettings()" sdListTextProperty="name" sdListValueProperty="name" sdValueField="sourceName"></select>
         </div>
         <div type="range" class="sdpi-item sdShowTooltip" id="dvVolume">
             <div class="sdpi-item-label" id="volumeLabel">Volume</div>
