--- a/streamdeck-obstools/PropertyInspector/SourceVolumeAdjuster.html
+++ b/streamdeck-obstools/PropertyInspector/SourceVolumeAdjuster.html
@@ -19,7 +19,7 @@
         </details>
         <div class="sdpi-item" id="dvSourceName">
             <div class="sdpi-item-label">Source Name</div>
-            <input class="sdpi-item-value sdProperty" id="sourceName" oninput="setSettings()">
+            <select class="sdpi-item-value select sdProperty sdList" id="sources" oninput="setSettings()" sdListTextProperty="name" sdListValueProperty="name" sdValueField="sourceName"></select>
         </div>
         <div class="sdpi-item" id="select_single">
             <div class="sdpi-item-label">Volume Step</div>
