--- a/streamdeck-obstools/PropertyInspector/SmartSceneSwitcher.html
+++ b/streamdeck-obstools/PropertyInspector/SmartSceneSwitcher.html
@@ -42,12 +42,12 @@
                 <label for="showPreview" class="sdpi-item-label"><span></span>Preview Scene (Experimental)</label>
             </div>
         </div>
-        <div class="sdpi-item" id="dvCustomImage">
+        <div class="sdpi-item" id="dvEnabledImage">
             <div class="sdpi-item-label">Custom image</div>
             <div class="sdpi-item-group file" id="filepickergroup">
-                <input class="sdpi-item-value sdProperty sdFile" type="file" id="customImage" accept=".jpg, .jpeg, .png, .ico, .gif, .bmp, .tiff" oninput="setSettings()">
-                <label class="sdpi-file-info " for="customImage" id="customImageFilename">No file...</label>
-                <label class="sdpi-file-label" for="customImage">Choose file...</label>
+                <input class="sdpi-item-value sdProperty sdFile" type="file" id="enabledImage" accept=".jpg, .jpeg, .png, .ico, .gif, .bmp, .tiff" oninput="setSettings()">
+                <label class="sdpi-file-info " for="enabledImage" id="enabledImageFilename">No file...</label>
+                <label class="sdpi-file-label" for="enabledImage">Choose file...</label>
             </div>
         </div>
     </div>
