--- a/streamdeck-obstools/PropertyInspector/SourceToggle.html
+++ b/streamdeck-obstools/PropertyInspector/SourceToggle.html
@@ -29,20 +29,20 @@
             <div class="sdpi-item-label">Source Name</div>
             <input class="sdpi-item-value sdProperty" id="sourceName" oninput="setSettings()">
         </div>
-        <div class="sdpi-item" id="dvVisibleImage">
+        <div class="sdpi-item" id="dvEnabledImage">
             <div class="sdpi-item-label">Visible image</div>
             <div class="sdpi-item-group file" id="filepickergroup">
-                <input class="sdpi-item-value sdProperty sdFile" type="file" id="visibleImage" accept=".jpg, .jpeg, .png, .ico, .gif, .bmp, .tiff" oninput="setSettings()">
-                <label class="sdpi-file-info " for="visibleImage" id="visibleImageFilename">No file...</label>
-                <label class="sdpi-file-label" for="visibleImage">Choose file...</label>
+                <input class="sdpi-item-value sdProperty sdFile" type="file" id="enabledImage" accept=".jpg, .jpeg, .png, .ico, .gif, .bmp, .tiff" oninput="setSettings()">
+                <label class="sdpi-file-info " for="enabledImage" id="enabledImageFilename">No file...</label>
+                <label class="sdpi-file-label" for="enabledImage">Choose file...</label>
             </div>
         </div>
-        <div class="sdpi-item" id="dvInvisibleImage">
+        <div class="sdpi-item" id="dvDisabledImage">
             <div class="sdpi-item-label">Invisible image</div>
             <div class="sdpi-item-group file" id="filepickergroup">
-                <input class="sdpi-item-value sdProperty sdFile" type="file" id="invisibleImage" accept=".jpg, .jpeg, .png, .ico, .gif, .bmp, .tiff" oninput="setSettings()">
-                <label class="sdpi-file-info " for="invisibleImage" id="invisibleImageFilename">No file...</label>
-                <label class="sdpi-file-label" for="invisibleImage">Choose file...</label>
+                <input class="sdpi-item-value sdProperty sdFile" type="file" id="disabledImage" accept=".jpg, .jpeg, .png, .ico, .gif, .bmp, .tiff" oninput="setSettings()">
+                <label class="sdpi-file-info " for="disabledImage" id="disabledImageFilename">No file...</label>
+                <label class="sdpi-file-label" for="disabledImage">Choose file...</label>
             </div>
         </div>
     </div>
