--- a/streamdeck-obstools/PropertyInspector/InputAudioMonitor.html
+++ b/streamdeck-obstools/PropertyInspector/InputAudioMonitor.html
@@ -17,8 +17,8 @@
             <summary>For feedback/suggestions contact me at <span class="linkspan" onclick="openWebsite()">https://BarRaider.com</span></summary>
         </details>
         <div class="sdpi-item" id="dvSourceName">
-            <div class="sdpi-item-label">Source Name</div>
-            <select class="sdpi-item-value select sdProperty sdList" id="sources" oninput="setSettings()" sdListTextProperty="name" sdListValueProperty="name" sdValueField="sourceName"></select>
+            <div class="sdpi-item-label">Input Name</div>
+            <select class="sdpi-item-value select sdProperty sdList" id="sources" oninput="setSettings()" sdListTextProperty="inputName" sdListValueProperty="inputName" sdValueField="sourceName"></select>
         </div>
         <div class="sdpi-item" id="dvMonitorType">
             <div class="sdpi-item-label">Monitor Type</div>
