Fixed variable name in v5

--- a/streamdeck-obstools/PropertyInspector/FilterToggle.html
+++ b/streamdeck-obstools/PropertyInspector/FilterToggle.html
@@ -23,7 +23,7 @@
         </div>
         <div class="sdpi-item" id="dvFilterName">
             <div class="sdpi-item-label">Filter Name</div>
-            <select class="sdpi-item-value select sdProperty sdList" id="filters" oninput="setSettings()" sdListTextProperty="name" sdListValueProperty="name" sdValueField="filterName"></select>
+            <select class="sdpi-item-value select sdProperty sdList" id="filters" oninput="setSettings()" sdListTextProperty="filterName" sdListValueProperty="filterName" sdValueField="filterName"></select>
         </div>
         <div class="sdpi-item" id="dvEnabledImage">
             <div class="sdpi-item-label">Enabled image</div>
