--- a/streamdeck-obstools/PropertyInspector/SmartSceneSwitcher.html
+++ b/streamdeck-obstools/PropertyInspector/SmartSceneSwitcher.html
@@ -18,7 +18,7 @@
         </details>
         <div class="sdpi-item" id="dvSceneName">
             <div class="sdpi-item-label">Scene Name</div>
-            <select class="sdpi-item-value select sdProperty sdList" id="scenes" oninput="setSettings()" sdListTextProperty="name" sdListValueProperty="name" sdValueField="sceneName"></select>
+            <select class="sdpi-item-value select sdProperty sdList" id="scenes" oninput="setSettings()" sdListTextProperty="sceneName" sdListValueProperty="sceneName" sdValueField="sceneName"></select>
         </div>
         <div type="checkbox" class="sdpi-item" id="dvTransition">
             <div class="sdpi-item-label">Transition</div>
