--- a/streamdeck-obstools/PropertyInspector/SourceToggle.html
+++ b/streamdeck-obstools/PropertyInspector/SourceToggle.html
@@ -19,7 +19,7 @@
         </details>
         <div class="sdpi-item" id="dvSceneName">
             <div class="sdpi-item-label">Scene Name</div>
-            <select class="sdpi-item-value select sdProperty sdList" id="scenes" oninput="setSettings()" sdListTextProperty="name" sdListValueProperty="name" sdValueField="sceneName"></select>
+            <select class="sdpi-item-value select sdProperty sdList" id="scenes" oninput="setSettings()" sdListTextProperty="sceneName" sdListValueProperty="sceneName" sdValueField="sceneName"></select>
         </div>
         <div class="sdpi-item" id="dvSourceNameSelect">
             <div class="sdpi-item-label">Source Name</div>
