--- a/streamdeck-obstools/PropertyInspector/FocusedWindowCapture.html
+++ b/streamdeck-obstools/PropertyInspector/FocusedWindowCapture.html
@@ -24,7 +24,7 @@
         </div>
         <div class="sdpi-item" id="dvSceneName">
             <div class="sdpi-item-label">Scene Name</div>
-            <select class="sdpi-item-value select sdProperty sdList" id="scenes" oninput="setSettings()" sdListTextProperty="name" sdListValueProperty="name" sdValueField="sceneName"></select>
+            <select class="sdpi-item-value select sdProperty sdList" id="scenes" oninput="setSettings()" sdListTextProperty="sceneName" sdListValueProperty="sceneName" sdValueField="sceneName"></select>
         </div>
         <div class="sdpi-item" id="dvSourceNameSelect">
             <div class="sdpi-item-label">'Window Capture' Name</div>
